Fix the sidebar bottom whitespace that appears on certain resolutions

--- a/theme/pxt.less
+++ b/theme/pxt.less
@@ -89,7 +89,9 @@
   overflow-y: auto;
   right: 0;
   border:none;
-  height: calc(100% - (@mobileMenuHeight + 4.6rem));
+  top: 0;
+  padding-top: @mainMenuHeight;
+  height: 100%;
 }
 .rtl #sidedocs {
     right:auto;
